# monorepo

./: README.md
ADA codes/: .#new.cpp#  new  testproject.gpr
AI/rolling_stone/: .gitignore  CMakeLists.txt  CMakeSettings.json  bitstring.c  bitstring.h  board.h  bsdtime.h  conflicts.c  conflicts.h  deadlock.c  deadlock.h  deadsearch.c  deadsearch.h  debug.c  debug.h  dl.c  dl.h  gtv.c  gtv.h  hashtable.c  hashtable.h  histogram.c  histogram.h  ida.c  ida.h  init.c  init.h  io.c  io.h  lowerbound.c  lowerbound.h  macro.c  macro.h  mark.c  mark.h  menu.c  menu.h  moves.c  moves.h  mymem.c  (+11 more)
AI/rolling_stone/screens/: DL.1  DL.1.pc  DL.2  DL.2.pc  screen.48
Assembly/: ADDITION.asm  Hello World.asm  PGM4_1.asm  PGM4_3.asm  PGM6_1.asm  PGM9_1.asm
C codes/: .char_array_reverse.c.swo  13.09.2011.c  Dream.In.C__Number.pyramid.c  Hello World.c  HelloMyName.c  Hexadecimal.c  Java_assignment.cpp  Jisan-Hex.c  New hello.c  New.c  Shaon-Hex.c  Untitled1.c  Untitled2.c  a.out  array.c  bitwise_test.c  ccodegalaxy-dec2bin.c  char_array_reverse.c  concatenate_torsho.cpp  converge.c  dani__dec2bin__mod.c  dani__dec2bin__mod.c.cbTemp  daniweb__dec2bin__array.c  daniweb__pascal.c  dec2bin_happycoding.c  encrypt.c  examp__p53__2.c  examp__p53__2.s  examp__p60.c  examp__p61.c  examp__p64__2.c  examp__p65(2).c  examp__p65.c  examp__p73__1.c  examp__p73__2.c  examp__p74__1.c  examp__p83__2.c  examp__p89.c  examp__p89__1.c  examp__p93__1.c  (+58 more)
C# Codes/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  PIME.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  install_manifest.txt
C++ codes/: .bitwise_test.cpp.swp  24.cpp  a.out  array_numbering_test.cpp  bitwise_test.cpp  (+3 more)
UVa/UVa_Cpp/: 10018.cpp  10019.cpp  10023.cpp  10035.cpp  10038.cpp  10041.cpp  10055.cpp  10070.cpp  10071.cpp  10093.cpp  10101.cpp  10101_anuranan.cpp  10110.cpp  10189.cpp  102.cpp  10226.cpp  10235.cpp  10276.cpp  10308.cpp  10379.cpp  10773.cpp  10925.cpp  11332.cpp  11636.c  11636.cpp  12149.cpp  12250.cpp  136.cpp  272.cpp  417.cpp  424.cpp  458.cpp  488.cpp  494.cpp  CMakeLists.txt
github_projects/AI/SimulatedAnnealing-master/: CMakeLists.txt  SA_output.txt  sa.cpp  sa.m  tai100_10_1.txt  tai100_20_1.txt  tai100_5_1.txt  tai10_3_1.txt  tai20_10_1.txt  tai20_20_1.txt  tai20_5_1.txt  tai50_10_1.txt  tai50_20_1.txt  tai50_5_1.txt  ts.txt
(+3706 files in other folders)
