cmake_minimum_required(VERSION 3.6)
project(UVa_Cpp)

set(CMAKE_CXX_STANDARD 14)

#FILE(GLOB SOURCE_FILES *.cpp)

add_executable(10018 10018.cpp)
add_executable(10189 10189.cpp)
add_executable(12149 12149.cpp)
add_executable(10019 10019.cpp)
add_executable(10226 10226.cpp)
add_executable(12250 12250.cpp)
add_executable(10023 10023.cpp)
add_executable(10235 10235.cpp)
add_executable(12578 12578.cpp)
add_executable(10035 10035.cpp)
add_executable(10276 10276.cpp)
add_executable(136 136.cpp)
add_executable(10038 10038.cpp)
add_executable(102 102.cpp)
add_executable(272 272.cpp)
add_executable(10041 10041.cpp)
add_executable(10308 10308.cpp)
add_executable(417 417.cpp)
add_executable(10055 10055.cpp)
add_executable(10379 10379.cpp)
add_executable(424 424.cpp)
add_executable(10070 10070.cpp)
add_executable(10405 10405.cpp)
add_executable(442 442.cpp)
add_executable(10071 10071.cpp)
add_executable(10773 10773.cpp)
add_executable(458 458.cpp)
add_executable(10093 10093.cpp)
add_executable(10925 10925.cpp)
add_executable(488 488.cpp)
add_executable(10101_anuranan 10101_anuranan.cpp)
add_executable(11332 11332.cpp)
add_executable(494 494.cpp)
add_executable(10101 10101.cpp)
add_executable(11636.c 11636.cpp)
add_executable(10110 10110.cpp)
add_executable(11636 11636.cpp)
add_executable(11906_marioyc 11906_marioyc.cpp)

#set(SOURCE_FILES "*.cpp", "*.c")
#add_executable(UVa_Cpp ${SOURCE_FILES})